--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Blueprint Marketplace - Premium Architectural Drawings</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Hubot+Sans&family=Lora&display=swap">
     <link href="/src/main.css" rel="stylesheet" />
 </head>
 
